compiler/kernc_cli/tests/soundness/reject/specialization/transitive_supertrait_upcast_cannot_drop_const_specific_assoc_binding.rn
// stderr: the source pointer type must implement the target trait

trait Base[N: usize] {
    type Out;
    fn make() Out;
};

trait Mid[N: usize]: Base[N] {};
trait Leaf[N: usize]: Mid[N] {};

struct X {};

impl[N: usize] &X: Leaf[N] {}
impl[N: usize] &X: Mid[N] {}

impl[N: usize] &X: Base[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

impl &X: Base[4] {
    type Out = i64;

    fn make() Out {
        return 9;
    }
}

fn main() i32 {
    let x = X.{};
    let leaf = (x.& as &Leaf[4]);
    _ = (leaf as &Base[4, Out = i32]);
    return 0;
}
